--- a/my_works.html
+++ b/my_works.html
@@ -52,9 +52,9 @@
                     </ul>
                     <h4>Downloadable Files:</h4>
                     <ul class="download-list">
-                        <li><a href="downloads/ZooVRventure_Report.pdf" target="_blank">Project Report (PDF)</a></li>
-                        <li><a href="downloads/ZooVRventure_Presentation.pdf" target="_blank">Presentation Slides (PDF)</a></li>
-                        <li><a href="downloads/ZooVRventure_Build.zip" target="_blank">Demo Build (ZIP)</a></li>
+                        <li><a href="https://github.com/MRafiq0220/Personal-Portfolio/blob/Portfolio/ZooVRventure_Report.pdf" target="_blank">Project Report (PDF)</a></li>
+                        <li><a href="https://github.com/MRafiq0220/Personal-Portfolio/blob/Portfolio/ZooVRventure_Presentation.pdf" target="_blank">Presentation Slides (PDF)</a></li>
+                        <li><a href="https://drive.google.com/file/d/1jI9aZzAmT1CGEpFeffYY0jifK_UDIgAZ/view?usp=drive_link" target="_blank">Demo Build (ZIP)</a></li>
                     </ul>
                 </div>
             </div>
@@ -81,9 +81,7 @@
                     </ul>
                     <h4>Downloadable Files:</h4>
                     <ul class="download-list">
-                        <li><a href="downloads/MrApple_Model.blend" target="_blank">Blender File (.blend)</a></li>
-                        <li><a href="downloads/MrApple_Textures.zip" target="_blank">Texture Maps (ZIP)</a></li>
-                        <li><a href="downloads/MrApple_Sketch.pdf" target="_blank">Concept Sketch (PDF)</a></li>
+                        <li><a href="https://drive.google.com/file/d/18wLdNRtjlTXUnWsxz-rQk97GdEGlGq1e/view?usp=drive_link" target="_blank">Blender File (.blend)</a></li>
                     </ul>
                 </div>
             </div>
@@ -116,8 +114,7 @@
                     </ul>
                     <h4>Downloadable Files:</h4>
                     <ul class="download-list">
-                        <li><a href="downloads/SejahteraClinic_Report.pdf" target="_blank">Project Report (PDF)</a></li>
-                        <li><a href="downloads/SejahteraClinic_Demo.zip" target="_blank">System Demo (ZIP)</a></li>
+                        <li><a href="https://github.com/MRafiq0220/Personal-Portfolio/tree/Sejahtera_ClinicManagementSystem" target="_blank">GitHub</a></li>
                     </ul>
                 </div>
             </div>
@@ -149,9 +146,7 @@
                     </ul>
                     <h4>Downloadable Files:</h4>
                     <ul class="download-list">
-                        <li><a href="downloads/STMS_Figma_Design_File.fig" target="_blank">Figma Design File (.fig)</a></li>
-                        <li><a href="downloads/STMS_Wireframes.pdf" target="_blank">Wireframes (PDF)</a></li>
-                        <li><a href="downloads/STMS_UserFlows.pdf" target="_blank">User Flows (PDF)</a></li>
+                        <li><a href="https://www.figma.com/proto/o1Sn2SRgj3vwIs0jc7fc8H/STMS?page-id=0%3A1&node-id=1-3&starting-point-node-id=1%3A3&t=ZbHQNlJbKFeJJ3mQ-1" target="_blank">Figma Design File (.fig)</a></li>
                     </ul>
                 </div>
             </div>
